# Pipe-notch-generator

./: .gitignore  index.html  logchange.md  package-lock.json  package.json  pipe-notch-step-assembly-implementation-spec.md  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: step_export.py
backend/app/cad/: __init__.py  dto.py  evaluator.py
backend/app/cad/builders/: __init__.py  booleans.py  cylinders.py  frames.py  trims.py  validation.py
backend/app/cad/step/: __init__.py  assembly_writer.py  naming.py
backend/app/models/: request_models.py  response_models.py
backend/tests/: test_evaluator.py
src/: App.tsx  index.css  vite-env.d.ts
src/components/ui/: Checkbox.tsx  DebouncedInput.tsx  NumericInput.tsx  ReadonlyField.tsx  Section.tsx  SegmentedControl.tsx
src/core/: dxf-service.ts  dxf-writer.ts  export-points.ts  geometry-engine.ts  math-utils.ts  pdf-generator.ts
src/core/__tests__/: export-points.test.ts  geometry.test.ts  legacy-geometry-engine.ts
src/core/validation/: stepReadiness.test.ts  stepReadiness.ts
src/domain/geometry/: frame.ts  mainHoleTemplate.ts  receiverTrimPreview.test.ts  receiverTrimPreview.ts  solids.ts  vector.ts
src/domain/model/: defaults.ts  deriveProject.test.ts  deriveProject.ts  types.ts  validation.ts
src/features/controls/: Sidebar.tsx
src/hooks/: useDerivedProject.ts  useDownloadAction.ts
src/store/: useParamStore.ts  useProjectStore.ts
src/types/: index.ts
(+15 files in other folders)
