[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipe-notch-step-backend"
version = "0.1.0"
description = "Exact STEP assembly export backend for Pipe-notch-generator"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "cadquery>=2.4,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
